--- a/_sass/base/variables.sass
+++ b/_sass/base/variables.sass
@@ -6,6 +6,8 @@ $beta: #222
 $gama: #aaa
 $delta: #4b0082
 $epsilon: #ededed
+$black: #000000
+$white: #ffffff
 
 $mobile: "only screen and (max-width: 400px)"
 $tablet: "only screen and (min-width: 400px) and (max-width: 1050px)"
